@@ -87,3 +87,12 @@ fsync_after_written_bytes=0
 # default value is 10 seconds
 sync_log_buff_interval=10
 
+# if check file duplicate
+# 1 or yes: need check
+# 0 or no: do not check
+# default value is 0
+check_file_duplicate=1
+
+# use <#include> directive to load FastDHT server list
+#include /home/yuqing/fastdht/conf/fdht_servers.conf
+
